--- a/browser.html
+++ b/browser.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Free Ice Cream Benefit Now Available!</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Free Ice Cream Cone from the US Department of Ice Cream!</title>
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div>
